--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,1 +1,131 @@
-<footer></footer>
+<footer class="footer">
+
+  <div class="container">
+
+    <div class="footer__wrapper">
+
+      <div class="footer__contacts">
+
+        <a class="footer__logo" href="#">
+          <img class="footer__img" src="@img/logo.svg" alt="logo" width="202" height="48">
+        </a>
+
+        <ul class="footer__contacts-links">
+
+          <li class="footer__contacts-item">
+            <div class="sr-only">Our email</div>
+            <a class="footer__contacts-link footer__contacts-link--mail"
+              href="mailto:Enquiry@Rhythm.com">Enquiry@Rhythm.com</a>
+          </li>
+
+          <li class="footer__contacts-item">
+            <div class="sr-only">Our location</div>
+            <a class="footer__contacts-link footer__contacts-link--location" href="#">San Francisco</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+      <div class="footer__nav">
+
+        <div class="footer__col">
+
+          <h3 class="footer__title">
+            Pages
+          </h3>
+
+          <ul class="footer__col-list">
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Store</a>
+
+            </li>
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Collections</a>
+
+            </li>
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Support</a>
+
+            </li>
+
+          </ul>
+
+        </div>
+
+        <div class="footer__col">
+
+          <h3 class="footer__title">
+            Product
+          </h3>
+
+          <ul class="footer__col-list">
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Terms</a>
+
+            </li>
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Privacy Policy</a>
+
+            </li>
+
+            <li class="footer__col-item">
+
+              <a class="footer__col-link" href="#">Copyright</a>
+
+            </li>
+
+          </ul>
+
+        </div>
+
+      </div>
+
+      <div class="footer__social">
+
+        <h3 class="footer__title">Follow us</h3>
+
+        <ul class="footer__social-list">
+
+          <li class="footer__social-item">
+            <div class="sr-only">Our Facebook</div>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Facebook.svg);"></a>
+
+          </li>
+
+          <li class="footer__social-item">
+            <div class="sr-only">Our Twitter</div>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Twitter.svg);"></a>
+
+          </li>
+
+          <li class="footer__social-item">
+            <div class="sr-only">Our Instagram</div>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Instagram.svg);"></a>
+
+          </li>
+
+
+        </ul>
+
+      </div>
+
+    </div>
+
+    <div class="footer__copy">
+      © 2022 Copyright.Rhythm
+    </div>
+
+  </div>
+
+</footer>
