--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -1,3 +1,35 @@
-<header>
+<header class="header">
+  <div class="container">
 
+    <nav class="header__nav">
+
+      <a class="header__logo" href="#">
+        <img class="header__img" src="@img/logo.svg" alt="logo" width="123" height="29">
+      </a>
+
+      <ul class="header__menu">
+
+        <li class="header__item">
+          <a class="header__link" href="#">
+            Store
+          </a>
+        </li>
+
+        <li class="header__item">
+          <a class="header__link" href="#">
+            Collections
+          </a>
+        </li>
+
+        <li class="header__item">
+          <a class="header__link" href="#">
+            Support
+          </a>
+        </li>
+
+      </ul>
+
+    </nav>
+
+  </div>
 </header>
