--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -3,9 +3,18 @@
 
     <nav class="header__nav">
 
-      <a class="header__logo" href="#">
-        <img class="header__img" src="@img/logo.svg" alt="logo" width="123" height="29">
-      </a>
+      <div class="header__logos">
+
+        <a class="header__logo" href="#">
+          <img class="header__img" src="@img/logo.svg" alt="logo" width="123" height="29">
+        </a>
+
+        <a class="header__logo-mobile" href="#">
+          <img class="header__img" src="@img/hero-dec.svg" alt="logo" width="40" height="40">
+        </a>
+
+      </div>
+
 
       <ul class="header__menu">
 
