--- a/src/html/homepage/_browser.html
+++ b/src/html/homepage/_browser.html
@@ -4,35 +4,45 @@
 
     <div class="browser__wrapper">
 
-      <h2 class="title">
-        Browse and buy your <span>favorite guitars</span> with Rhythm.
-      </h2>
+      <div class="browser__content">
 
-      <ul class="browser__list">
+        <h2 class="title">
+          Browse and buy your <span>favorite guitars</span> with Rhythm.
+        </h2>
 
-        <li class="browser__item">
+        <ul class="browser__list">
 
-          <a class="browser__link" href="#">
+          <li class="browser__item">
 
-            <img class="browser__img" src="@img/Mobile-app-store-badge-1.png" alt="">
+            <a class="browser__link" href="#">
 
-          </a>
+              <div class="sr-only">Download our android app</div>
 
-        </li>
+              <img class="browser__img" src="@img/Mobile-app-store-badge-1.png" alt="" width="192" height="57">
 
-        <li class="browser__item">
+            </a>
 
-          <a class="browser__link" href="#">
+          </li>
 
-            <img class="browser__img" src="@img/Mobile-app-store-badge-2.png" alt="">
+          <li class="browser__item">
 
-          </a>
+            <a class="browser__link" href="#">
 
-        </li>
+              <div class="sr-only">Download our iPhone app</div>
 
-      </ul>
+              <img class="browser__img" src="@img/Mobile-app-store-badge-2.png" alt="" width="171" height="57">
 
-      <img class="browser__bg" src="@img/browser-bg.png" alt="" width="568" height="533">
+            </a>
+
+          </li>
+
+        </ul>
+
+      </div>
+
+
+
+      <img class="browser__bg" src="@img/browser-bg.png" alt="Our app design" width="568" height="533">
 
     </div>
 
