--- a/src/html/homepage/_customers.html
+++ b/src/html/homepage/_customers.html
@@ -14,7 +14,7 @@
 
           <div class="customers__photo">
 
-            <img src="@img/Customer-photo-1.png" alt="" width="326" height="341">
+            <img class="customers__img" src="@img/Customer-photo-1.png" alt="" width="326" height="341">
 
           </div>
 
@@ -38,7 +38,7 @@
 
           <div class="customers__photo">
 
-            <img src="@img/Customer-photo-2.png" alt="" width="326" height="341">
+            <img class="customers__img" src="@img/Customer-photo-2.png" alt="" width="326" height="341">
 
           </div>
 
@@ -62,7 +62,7 @@
 
           <div class="customers__photo">
 
-            <img src="@img/Customer-photo-1.png" alt="" width="326" height="341">
+            <img class="customers__img" src="@img/Customer-photo-1.png" alt="" width="326" height="341">
 
           </div>
 
@@ -86,7 +86,7 @@
 
           <div class="customers__photo">
 
-            <img src="@img/Customer-photo-2.png" alt="" width="326" height="341">
+            <img class="customers__img" src="@img/Customer-photo-2.png" alt="" width="326" height="341">
 
           </div>
 
