--- a/src/html/homepage/_hero.html
+++ b/src/html/homepage/_hero.html
@@ -12,13 +12,31 @@
         Explore 50k+ latest collections of branded guitars online with Rhythm.
       </p>
 
-      <a class="hero__button" href="#">
-        Get the App
-      </a>
+      <div class="hero__actions">
+
+        <a class="hero__button" href="#">
+          Get the App
+        </a>
+
+        <svg class="hero__icon" width="26" height="29">
+          <use xlink:href="@img/icons/icons.svg#google-paly-logo"></use>
+        </svg>
+
+        <svg class="hero__icon" width="26" height="32">
+          <use xlink:href="@img/icons/icons.svg#apple-logo"></use>
+        </svg>
+
+      </div>
+
 
     </div>
 
-    <img class="hero__bg" src="@img/hero-bg.png" alt="Background image" width="672" height="586">
+    <div class="hero__image">
+
+      <img class="hero__bg" src="@img/hero-bg.png" alt="Background image" width="672" height="586">
+
+    </div>
+
 
 
   </div>
