--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -99,19 +99,19 @@
 
           <li class="footer__social-item">
             <div class="sr-only">Our Facebook</div>
-            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Facebook.svg);"></a>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(./img/Facebook.svg);"></a>
 
           </li>
 
           <li class="footer__social-item">
             <div class="sr-only">Our Twitter</div>
-            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Twitter.svg);"></a>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(./img/Twitter.svg);"></a>
 
           </li>
 
           <li class="footer__social-item">
             <div class="sr-only">Our Instagram</div>
-            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(../img/Instagram.svg);"></a>
+            <a class="footer__social-link" href="#" style="-webkit-mask-image:url(./img/Instagram.svg);"></a>
 
           </li>
 
