--- a/src/html/homepage/_why.html
+++ b/src/html/homepage/_why.html
@@ -8,7 +8,7 @@
 
     <ul class="why__list">
 
-      <li class="why__item" style="background-image: url('../img/dignity-img-1.png');">
+      <li class="why__item" style="background-image: url('./img/dignity-img-1.png');">
 
         <h3 class="why__title">Smooth Browsing</h3>
 
@@ -16,7 +16,7 @@
 
       </li>
 
-      <li class="why__item" style="background-image: url('../img/dignity-img-2.png');">
+      <li class="why__item" style="background-image: url('./img/dignity-img-2.png');">
 
         <h3 class="why__title">EASY Delivery</h3>
 
@@ -24,7 +24,7 @@
 
       </li>
 
-      <li class="why__item" style="background-image: url('../img/dignity-img-3.png');">
+      <li class="why__item" style="background-image: url('./img/dignity-img-3.png');">
 
         <h3 class="why__title">SwiFT PAYMENTS</h3>
 
