--- a/src/html/homepage/_customers.html
+++ b/src/html/homepage/_customers.html
@@ -2,9 +2,9 @@
 
   <div class="container">
 
-    <div class="title">
+    <h2 class="title">
       What our <span>customer’s</span> say
-    </div>
+    </h2>
 
     <div class="customers__swiper">
 
@@ -18,19 +18,23 @@
 
           </div>
 
-          <figure class="customers__figure">
+          <div class="customers__content">
 
-            <p class="customers__text">
-              “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
-              service the brand
-              provides, highly recommend Rhythm anytime.”
-            </p>
+            <figure class="customers__figure">
 
-            <figcaption class="customers__name">Ryan Wels</figcaption>
+              <blockquote class="customers__text">
+                “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
+                service the brand
+                provides, highly recommend Rhythm anytime.”
+              </blockquote>
 
-            <span class="customers__characteristic">PROFESSIONAL GUITARIST</span>
+              <figcaption class="customers__name">Ryan Wels</figcaption>
 
-          </figure>
+            </figure>
+
+            <p class="customers__characteristic">PROFESSIONAL GUITARIST</p>
+
+          </div>
 
         </div>
 
@@ -42,19 +46,23 @@
 
           </div>
 
-          <figure class="customers__figure">
+          <div class="customers__content">
 
-            <p class="customers__text">
-              “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
-              service the brand
-              provides, highly recommend Rhythm anytime.”
-            </p>
+            <figure class="customers__figure">
 
-            <figcaption class="customers__name">Ryan Wels 2</figcaption>
+              <blockquote class="customers__text">
+                “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
+                service the brand
+                provides, highly recommend Rhythm anytime.”
+              </blockquote>
 
-            <span class="customers__characteristic">PROFESSIONAL GUITARIST</span>
+              <figcaption class="customers__name">Ryan Wels 2</figcaption>
 
-          </figure>
+            </figure>
+
+            <p class="customers__characteristic">PROFESSIONAL GUITARIST</p>
+
+          </div>
 
         </div>
 
@@ -66,19 +74,23 @@
 
           </div>
 
-          <figure class="customers__figure">
+          <div class="customers__content">
 
-            <p class="customers__text">
-              “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
-              service the brand
-              provides, highly recommend Rhythm anytime.”
-            </p>
+            <figure class="customers__figure">
 
-            <figcaption class="customers__name">Ryan Wels 3</figcaption>
+              <blockquote class="customers__text">
+                “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
+                service the brand
+                provides, highly recommend Rhythm anytime.”
+              </blockquote>
 
-            <span class="customers__characteristic">PROFESSIONAL GUITARIST</span>
+              <figcaption class="customers__name">Ryan Wels 3</figcaption>
 
-          </figure>
+            </figure>
+
+            <p class="customers__characteristic">PROFESSIONAL GUITARIST</p>
+
+          </div>
 
         </div>
 
@@ -90,19 +102,23 @@
 
           </div>
 
-          <figure class="customers__figure">
+          <div class="customers__content">
 
-            <p class="customers__text">
-              “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
-              service the brand
-              provides, highly recommend Rhythm anytime.”
-            </p>
+            <figure class="customers__figure">
 
-            <figcaption class="customers__name">Ryan Wels 4</figcaption>
+              <blockquote class="customers__text">
+                “The Quality and Delivery is always on time, being a professional guitarist myself I love the customer
+                service the brand
+                provides, highly recommend Rhythm anytime.”
+              </blockquote>
 
-            <span class="customers__characteristic">PROFESSIONAL GUITARIST</span>
+              <figcaption class="customers__name">Ryan Wels 4</figcaption>
 
-          </figure>
+            </figure>
+
+            <p class="customers__characteristic">PROFESSIONAL GUITARIST</p>
+
+          </div>
 
         </div>
 
